--- a/css/styles.css
+++ b/css/styles.css
@@ -72,9 +72,7 @@ img {
   list-style: none;
 }
 
-.header {
-  border-bottom: #ECECEC 1px solid;
-}
+
 
 .header-container {
   display: flex;
@@ -148,8 +146,28 @@ img {
 }
 
 .nav__link_active {
+  position: relative;
   color: var(--active-color);
 }
+
+.nav__link_active::after {
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: 0px;
+
+
+  width: 100%;
+  /* height: 0; */
+
+  background-color: var(--active-color);
+  border: 2px solid var(--active-color);
+  border-radius: 2px;
+}
+
+/* .nav__active {
+  
+} */
 
 .nav__contacts {
   display: flex;
@@ -444,6 +462,34 @@ img {
   margin-right: 30px;
 }
 
+.works__thumb {
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  text-align: center;
+
+}
+
+.works__desc {
+  position: absolute;
+  bottom: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2F303ACC;
+  width: 370px;
+  height: 70px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
 
 /* -----------------------TEAM--------------------------- */
 .team {
@@ -606,6 +652,10 @@ img {
 
 
 /* -----------------------CARDS------------------------------ */
+.cards__page {
+  border-top: #ECECEC 1px solid;
+}
+
 .cards__button {
   font-weight: 500;
   font-size: 16px;
@@ -676,6 +726,32 @@ img {
 .card__container {
   padding: 20px 24px;
   border: #EEEEEE 1px solid;
+}
+
+.card__thumb {
+  position: relative;
+}
+
+.card__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 63px 24px;
+  width: 100%;
+  height: 100%;
+  background-color: #2196F3E5;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: #FFFFFF;
+
 }
 
 .card__img {
