--- a/css/modal.css
+++ b/css/modal.css
@@ -5,6 +5,9 @@
     width: 100%;
     height: 100%;
     background-color: #00000033;
+    opacity: 1;
+
+    transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -12,11 +15,16 @@
     pointer-events: none;
 }
 
+.backdrop.is-hidden .modal__window {
+    transform: translate(-50%, -50%) scale(1.5);
+}
+
 .modal__window {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
 
     min-height: 581px;
     min-width: 528px;
@@ -27,7 +35,6 @@
 .modal__close {
     position: absolute;
 
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,6 +44,5 @@
     height: 30px;
     border-radius: 50%;
     border-color: #0000001A;
-
     background-color: #ffffff;
 }
