--- a/css/styles.css
+++ b/css/styles.css
@@ -133,10 +133,11 @@ img {
 }
 
 .nav__link {
-
   color: var(--maintext-color);
   padding-top: 32px;
   padding-bottom: 32px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav__link:focus,
@@ -148,6 +149,8 @@ img {
 .nav__link_active {
   position: relative;
   color: var(--active-color);
+
+
 }
 
 .nav__link_active::after {
@@ -197,11 +200,15 @@ img {
   padding-bottom: 32px;
 
   color: var(--additionaltext-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav__contact__svg {
   margin-right: 10px;
   fill: var(--additionaltext-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 
@@ -259,6 +266,8 @@ img {
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer__link:focus,
@@ -307,6 +316,8 @@ img {
   border-radius: 50%;
   width: 44px;
   height: 44px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join__link:hover,
@@ -327,6 +338,7 @@ img {
   font-size: 16px;
   line-height: 1.88;
   font-weight: 700;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button__inactive {
@@ -390,6 +402,8 @@ img {
   border-width: 2px;
   border-color: var(--focused-button);
   box-shadow: 0px 4px 4px 0px #00000026;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -558,11 +572,14 @@ img {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team__member__link__svg {
   color: currentColor;
   fill: #AFB1B8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .team__member__contact:hover .team__member__link__svg,
@@ -586,6 +603,8 @@ img {
 .team__member__contact {
   border-radius: 50%;
   margin-left: 10px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team__member__contact:first-child {
@@ -626,6 +645,8 @@ img {
 
 .client__icon {
   fill: #AFB1B8;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client__link {
@@ -634,6 +655,10 @@ img {
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   outline: transparent;
+
+  color: var(--active-color);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client__link:hover .client__icon,
@@ -643,7 +668,7 @@ img {
 
 .client__link:hover,
 .client__link:focus {
-  fill: var(--active-color);
+  fill: inherit;
   border-color: var(--active-color);
 }
 
@@ -687,6 +712,8 @@ img {
   min-width: 72px;
   padding: 6px 22px;
 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio__button:not(:last-child) {
@@ -707,10 +734,16 @@ img {
 .card {
   background-color: var(--background-color);
   margin-bottom: 30px;
+
+
 }
 
 .card:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.card__link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card__link:hover,
@@ -730,6 +763,9 @@ img {
 
 .card__thumb {
   position: relative;
+
+
+  overflow: hidden;
 }
 
 .card__overlay {
@@ -752,6 +788,15 @@ img {
 
   color: #FFFFFF;
 
+  transform: translateY(100%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
+.card:hover .card__overlay {
+  transform: translateY(0%);
 }
 
 .card__img {
