--- a/css/styles.css
+++ b/css/styles.css
@@ -556,7 +556,7 @@ img {
 }
 
 .team__member__link__svg {
-  color: currentColor;
+
   fill: #AFB1B8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
@@ -569,6 +569,12 @@ img {
 .team__member__link:hover,
 .team__member__link:focus {
   background-color: var(--active-color);
+
+}
+
+.team__member__link:hover .team__member__link__svg,
+.team__member__link:focus .team__member__link__svg {
+  fill: var(--background-color);
 }
 
 .team__member__contacts {
@@ -582,7 +588,7 @@ img {
   border-radius: 50%;
   margin-left: 10px;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team__member__contact:first-child {
@@ -749,11 +755,12 @@ img {
   letter-spacing: 0.03em;
   color: #FFFFFF;
 
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card:hover .card__overlay {
+.card__link:hover .card__overlay,
+.card__link:focus .card__overlay {
   transform: translateY(0%);
 }
 
